infrastructure/k3s/overlays/production/fusionauth/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusionauth
spec:
  replicas: 2

  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values: [fusionauth]
                topologyKey: kubernetes.io/hostname

      containers:
        - name: fusionauth
          resources:
            requests:
              memory: "2Gi"
              cpu: "1000m"
              ephemeral-storage: "4Gi"
            limits:
              memory: "4Gi"
              cpu: "2000m"
              ephemeral-storage: "8Gi"
